--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
             <p>
                 This project was coded by
                 <a href="https://github.com/zaneknn" target="_blank">Zane Jakuševa</a> and is
-                <a href="#" target="_blank"> on GitHub</a> and
-                <a href="#" target="_blank">hosted on Netlify</a>
+                <a href="https://github.com/zaneknn/my-weather-app" target="_blank"> on GitHub</a> and
+                <a href="https://main--wonderful-seahorse-987066.netlify.app/" target="_blank">hosted on Netlify</a>
             </p>
         </footer>
     </div>
